@@ -31,9 +31,11 @@
        for folders with property modifications. (Stefan)
 
 Version 1.6.5
-- BUG: fixed access to freed memory. (Stefan)
+- BUG: fixed access to freed memory which could crash
+       the 'resolve' command. (Stefan)
 - BUG: Y coordinate in log statistics graph Repository had 
        inconsistent scaling. (Stefan Fuhrmann)
+- BUG: the ssl certificate files weren't saved. (Stefan)
 
 Version 1.6.4
 - CHG: Improved startup performance of the log cache. (Stefan)
